docs/assets/styles/docs.css
/* ... */
/* Grid background */
.with-grid {
  position: relative;

  --grid-size: 100px;
  --grid-half-size: calc(var(--grid-size) / 2);
  --grid-color: color-mix(
    in oklab,
    var(--quiet-primary-fill-mid),
    transparent calc(100% - (100% * var(--opacity-base) * 0.5))
  );
  --opacity-base: 0.18;

  /* prettier-ignore */
  background-image:
    /* Gradient top fade to transparent */
    linear-gradient(to top, transparent 0, color-mix(in oklab, var(--quiet-background-color), transparent 40%) 100%),
    /* Gradient bottom fade to primary */
    linear-gradient(
      to bottom,
      transparent 66%,
      color-mix(in oklab, var(--quiet-primary-fill-softer), transparent 40%) 100%
    ),
    /* Vertical grid lines */
    linear-gradient(
      color-mix(in oklab, var(--quiet-primary-fill-mid), transparent calc(100% - (100% * var(--opacity-base) * 0.5)))
        1px,
      transparent 1px
    ),
    /* Horizontal grid lines */
    linear-gradient(
      90deg,
      color-mix(in oklab, var(--quiet-primary-fill-mid), transparent calc(100% - (100% * var(--opacity-base) * 0.5)))
        1px,
      transparent 1px
    );

  background-position:
    100%,
    100%,
    -0.5px -0.5px,
    -0.5px -0.5px;

  background-size:
    100%,
    100%,
    var(--grid-half-size) var(--grid-half-size),
    var(--grid-half-size) var(--grid-half-size);

  background-repeat: repeat;
  background-attachment: fixed;
  text-wrap: balance;
}

/* Splash layout */
.layout-splash:not(.scrolled-down) #header {
  backdrop-filter: none;
  -webkit-backdrop-filter: none;
  background-color: transparent;
}

.layout-splash:not(.scrolled-down) #header::after {
  border-color: transparent;
}

.layout-splash #page {
  /* Don't overflow in landscape + mobile */
  @media screen and (max-height: 600px) {
    height: auto;
  }
}

.splash {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: calc(100svh - var(--docs-header-height));
  margin-inline: auto;
  padding-inline: 2rem;
  font-weight: var(--quiet-font-weight-bold);
  font-size: 1.375rem;
  line-height: 1.4;
  text-align: center;

  @media screen and (max-height: 550px) {
    height: auto;
    padding-block-start: 2rem;
  }
}

.splash-image {
  width: 100%;

  img,
  svg {
    display: block;
    width: 100%;
    max-width: 700px;
    max-height: 300px;
    margin-inline: auto;
    margin-block-end: 2rem;

    /* Smaller image on mobile */
    @media screen and (max-width: 959px) {
      max-width: none;
      height: auto;
      max-height: 24vh;
    }

    /* Shorter image when kinda short */
    @media screen and (max-height: 720px) {
      max-width: none;
      max-height: none;
    }
  }
}

.splash .subtitle {
  margin-block: 1rem;
  font-size: 2.25rem;
}

.splash-actions {
  display: flex;
  justify-content: center;
  margin-block-start: 2rem;
  gap: 1rem;

  @media screen and (max-height: 550px) {
    margin-block-start: 1rem;
  }
}

.quick-start {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-block: 2rem 4rem;
  gap: 1rem;

  quiet-button::part(button) {
    border-color: var(--quiet-strident);
    color: var(--quiet-strident);
  }
}

@media screen and (max-width: 600px) {
  .splash-actions {
    flex-direction: column;
    align-items: center;
    margin-block-end: 0;

    quiet-button {
      width: fit-content;
    }
  }
}

@media screen and (max-width: 959px) {
  .splash {
    margin-block: 0;
    font-size: 1rem;
    line-height: 1.3;
  }

  .splash .subtitle {
    font-size: 1.5rem;
  }

  #body.has-sidebar #page {
    padding-inline: 1rem;
  }
}

#content .below-splash {
  max-width: calc(70ch + 4rem);
  margin-inline: auto;
  padding-inline: 2rem;

  h2,
  h3,
  h4,
  p,
  div {
    text-align: center;
  }

  h2 {
    margin-block-start: 1.5rem;
  }

  pre:has(code) {
    box-shadow: var(--quiet-shadow-soft);
  }

  .features-grid {
    margin-block-start: 1rem;
    margin-block-end: 6rem;
  }

  .whiskers-center {
    margin-block-start: 6rem;
  }
}

/* Dark mode */
.quiet-dark #content .below-splash {
  pre:has(code) {
    backdrop-filter: blur(6px);
    background-color: color-mix(in oklab, var(--quiet-silent), transparent 50%);

    code {
      background: transparent;
    }
  }
}

#more-hint {
  display: flex;
  position: absolute;
  bottom: 1rem;
  left: calc(50% - 1.5rem);
  color: var(--quiet-strident);
  font-size: 3rem;
  animation: hint-bounce 2s infinite;
  transition:
    0.5s ease scale,
    0.5s ease opacity;

  @media screen and (max-width: 767px) {
    bottom: 1rem;
  }

  @media screen and (max-height: 720px) {
    opacity: 0;
  }
}

body.scrolled-down #more-hint {
  scale: 0.75;
  animation: none;
  opacity: 0;
  pointer-events: none;
}

@keyframes hint-bounce {
  0%,
  20%,
  50%,
  80%,
  70%,
  100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-6px);
  }
  60% {
    transform: translateY(-3px);
  }
}

/* Tables */
th.table-reflects {
  text-align: center;
}

td.table-reflects {
  font-size: 1.25em;
  text-align: center;

  [name='check'] {
    color: var(--quiet-constructive-text-colorful);
  }

  [name='x'] {
    color: var(--quiet-destructive-text-colorful);
  }
}

/* Component pages */
.component-summary {
  font-size: 1.25rem;
}

#content table code {
  background: none;
  color: inherit;
}

html:not(.quiet-dark) quiet-scroller:has(.component-table) {
  --shadow-color: #0001;
  --shadow-size: 0.75rem;

  /* Add a border to each shadow */
  &::part(start-shadow) {
    border-left: solid 1px #0002;
  }

  &::part(end-shadow) {
    border-right: solid 1px #0002;
  }

  /* Taper the shadows at the top and bottom for a realistic effect */
  &::part(start-shadow),
  &::part(end-shadow) {
    mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
  }
}
/* ... */

